# SPDX-License-Identifier: APACHE-2.0 AND MIT
[package]
name = "rustmq"
version = "0.1.0"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"
keywords = ["async/await", "future", "amqp", "rabbitmq", "lapin"]
license = "APACHE-2.0 AND MIT"

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
futures-util = "^0.3"
cookie-factory = "^0.3"
lapin = { version = "^0.28", features = ["futures"] }

[dev-dependencies]
clap = "^2.33"
flatbuffers = "^0.6"
futures-executor = { version = "^0.3", features = ["thread-pool"] }
tokio = { version = "^0.2", features = ["rt-core", "rt-threaded", "time"] }
