# SPDX-License-Identifier: Apache-2.0 AND MIT
[package]
name = "async-mq"
version = "1.1.0"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"
keywords = ["async-await", "future", "amqp", "rabbitmq", "lapin"]
license = "Apache-2.0 AND MIT"
description = "Zero-cost async-await abstraction of lapin AMQP client crate"
readme = "README.md"
repository = "https://github.com/keithnoguchi/async-mq"
categories = ["asynchronous", "api-bindings"]

[badges]
circle-ci = { repository = "keithnoguchi/async-mq", branch = "master" }

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
cookie-factory = "0.3"
lapin = "0.34"

[dev-dependencies]
clap = "2.33"
flatbuffers = "0.6"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "time"] }
futures-executor = { version = "0.3", features = ["thread-pool"] }
